--- a/assets/css/household.css
+++ b/assets/css/household.css
@@ -43,3 +43,46 @@
 #cancel_Icon{
     font-size: 20px;
 }
+.info{
+    margin: 35px 25px;
+}
+.countsButtonDiv{
+    display: flex;
+    justify-content: center;
+    margin: 45px 0;
+}
+.countsButtonDiv i{
+    margin: 0 15px;
+    font-size: 18px;
+    border: 3px solid var(--clr-Primary_blue);
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    padding: 2px;
+    cursor: pointer;
+}
+.validate{
+        text-align: center;
+}
+#validate_Values{
+    color: var(--clr-red);
+    display: none;
+}
+.submit{
+    text-align: center;
+}
+.submit button{
+    background: var(--clr-Primary_blue);
+    color: var(--clr-white);
+    border: none;
+    padding: 15px 0;
+    width: 50%;
+    border-radius: 5px;
+    margin: 15px 0;
+    cursor: pointer;
+}
+.submit button:hover{
+    background: var(--clr-semi-blue);
+    transition: .3s;
+    transform: scale(1.1);
+}
