--- a/assets/css/household.css
+++ b/assets/css/household.css
@@ -86,3 +86,9 @@
     transition: .3s;
     transform: scale(1.1);
 }
+
+@media (min-width: 0) and (max-width: 750px) {
+    .submit button{
+        width: 90%;
+}
+}
