--- a/assets/css/Pets.css
+++ b/assets/css/Pets.css
@@ -38,3 +38,56 @@
     transform: translateX(-5px);
     transition: .3s;
 }
+
+.householdTitle p{
+    color: var(--clr-gray);
+}
+.Pets_Info{
+    margin: 35px 25px;
+}
+.Info{
+    margin: 45px 0;
+}
+.output_Origin{
+    display: flex;
+    justify-content: space-between;
+    margin: 35px 0;
+}
+.counts_1{
+    display: flex;
+}
+.counts_1 i{
+    margin: 0 15px;
+    font-size: 18px;
+    border: 3px solid var(--clr-Primary_blue);
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    padding: 2px;
+    cursor: pointer;
+}
+
+.submit{
+    text-align: center;
+}
+.submit button{
+    background: var(--clr-Primary_blue);
+    color: var(--clr-white);
+    border: none;
+    padding: 15px 0;
+    width: 50%;
+    border-radius: 5px;
+    margin: 15px 0;
+    cursor: pointer;
+}
+.submit button:hover{
+    background: var(--clr-semi-blue);
+    transition: .3s;
+    transform: scale(1.1);
+}
+
+@media (min-width: 0) and (max-width: 750px) {
+    .submit button{
+        width: 90%;
+}
+}
